# engram

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  PLAN-consolidation-redesign.md  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
.claude-flow/: daemon-state.json
.claude/skills/: engram-memory.md
.github/workflows/: ci.yml
docker/postgres/: Dockerfile
docs/: api-design.md  api.md  architecture.md  design.md  development.md  mcp-memory-server-comparison.md  mcp.md  related-work.md
docs/research/: competitive.md  overview.md
examples/: README.md  confidence_demo.py  multi_tenant.py  quickstart.py
examples/local/: confidence.py  extraction.py  extraction_demo.py  memory_types.py
research/: accuracy.md  competitive.md  consolidation.md  encoding.md  forgetting.md  foundations.md  memory-systems.md  overview.md  procedural.md  retrieval.md  system-memo.md
src/engram/: __init__.py  config.py  context.py  exceptions.py  logging.py  service.py
src/engram/agents/: __init__.py
src/engram/api/: __init__.py  app.py  auth.py  helpers.py  router.py  schemas.py
src/engram/confidence/: __init__.py  bayesian.py  hedging.py  llm_certainty.py  signals.py  specificity.py
src/engram/embeddings/: __init__.py  base.py  cached.py  fastembed.py  openai.py
src/engram/entities/: __init__.py  models.py  resolution.py
src/engram/extraction/: __init__.py  base.py  date.py  email.py  language.py  name.py  negation.py  phone.py  quantity.py  stdnum.py  url.py
src/engram/linking/: __init__.py  discovery.py
src/engram/mcp/: __init__.py  __main__.py  context.py  server.py
src/engram/models/: __init__.py  audit.py  base.py  episode.py  fact.py  history.py  inhibitory.py  negation.py  procedural.py  provenance.py  semantic.py  structured.py  webhook.py
src/engram/propagation/: __init__.py  algorithms.py
src/engram/service/: __init__.py  base.py  conflict_ops.py  contradiction.py  encode.py  helpers.py  models.py  operations.py  query_expansion.py  recall.py  recall_utils.py
src/engram/storage/: __init__.py  audit.py  base.py  client.py  crud.py  history.py  linking.py  retry.py  search.py  store.py  transaction.py  webhook.py
src/engram/temporal/: __init__.py  detection.py  models.py
src/engram/webhooks/: __init__.py  delivery.py
src/engram/workflows/: __init__.py  backend.py  consolidation.py  decay.py  llm_utils.py  promotion.py  structure.py
tests/: conftest.py  test_activation_tracking.py  test_api.py  test_audit_and_freeze.py  test_audit_history_retry.py  test_auth.py  test_cascade_delete_correctness.py  test_cascade_deletion.py  test_confidence.py  test_config.py  test_consolidation.py  test_consolidation_error_recovery.py  test_context.py  test_context_reranking.py  test_contradiction.py  test_decay.py  test_diversity.py  test_embeddings.py  test_entities.py  test_entity_resolution.py  test_episode_immutability.py  test_exceptions.py  test_extraction.py  test_history.py  test_integration.py  test_link_atomicity.py  test_linking.py  test_logging.py  test_models.py  test_negation.py  test_promotion.py  test_propagation.py  test_propagation_algorithms.py  test_provenance.py  test_query_expansion.py  test_recall_behavior.py  test_review_bugs.py  test_service.py  test_storage.py  test_storage_linking.py  (+8 more)
tests/embeddings/: test_cached.py
tests/mcp/: test_context.py
