[project]
name = "engram"
version = "0.1.0"
description = "Memory you can trust. A memory system for AI applications that preserves ground truth, tracks confidence, and prevents hallucinations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Evan Volgas" }
]
keywords = ["ai", "memory", "llm", "pydantic", "qdrant", "hallucination"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai>=0.0.20",
    "python-dotenv>=1.0",

    # Vector storage
    "qdrant-client>=1.7",

    # Embeddings
    "openai>=1.0",           # OpenAI embeddings
    "tiktoken>=0.5",         # Token counting

    # Async
    "httpx>=0.25",

    # Utilities
    "structlog>=24.0",       # Structured logging

    # Durable execution (local dev)
    "dbos>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
    "black>=24.0",
]

# Alternative LLM providers
anthropic = ["anthropic>=0.18"]
google = ["google-generativeai>=0.4"]
groq = ["groq>=0.4"]
cohere = ["cohere>=5.0"]

# Alternative embedding providers
sentence-transformers = ["sentence-transformers>=2.3"]

# Durable execution (production)
temporal = ["temporalio>=1.4"]

# All providers
all = [
    "anthropic>=0.18",
    "google-generativeai>=0.4",
    "groq>=0.4",
    "cohere>=5.0",
    "sentence-transformers>=2.3",
]

[project.urls]
Homepage = "https://github.com/ashita-ai/engram"
Repository = "https://github.com/ashita-ai/engram"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/engram --cov-report=term-missing --cov-fail-under=80"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 88
target-version = ["py311"]
